--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  display: block;
+  height: 100vh;
+  min-height: 100%;
+  width: 100vw;
+  min-width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
 }
