--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
   display: grid;
   width: 100%;
   grid-template-areas:'tree editor editor editor editor'
