--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body {
+  margin: 0;
+  padding: 0;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .App {
   text-align: center;
   display: grid;
