--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,87 @@
-body {
+*, *:before, *:after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+body {
   display: block;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
+/*
+App Container
+*/
 .App {
-  /* text-align: center; */
   display: grid;
   width: 100%;
+  height: 100vh;
   grid-template-areas:'tree editor editor editor editor'
                       'tree editor editor editor editor'
                       'tree editor editor editor editor'
                       'footer footer footer footer footer';
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(3, 1fr) 25px;
+  grid-template-rows: repeat(3, 1fr) 20px;
 }
 
+/*
+Editor Styling
+*/
 .editor {
   grid-area: editor;
-  height: 75vh;
-  border : 1px solid red;
 }
 #editor-container {
   height: 100%;
   width: 100%;
 }
 
-.tree {
-  grid-area: tree;
-  background: #61616157;
-  overflow-y: scroll;
-  max-height: 75vh;
-}
-
+/*
+Footer Styling
+*/
 .footer {
   grid-area: footer;
   background: #747474;
 }
+
+
+/*
+Tree Styling
+*/
+.tree {
+  grid-area: tree;
+  background: #61616157;
+  overflow-y: scroll;
+  /* justify-content: left; */
+}
+li {
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+  padding: 6px;
+  list-style: none;
+  color: #1f1f1f;
+}
+li:hover {
+  color: #3f3f3f;
+  font-weight: bold;
+}
+
+#btn-updatefile {
+  justify-self: center;
+  padding: 8px;
+  background: none;
+  font-weight: bold;
+  border: 1px solid black;
+  border-radius: 3px;
+  transition: 0.1s;
+}
+#btn-updatefile:hover {
+  background: #747474;
+  font-weight: bold;
+  border-radius: 15px;
+}
+
+
+
+/*
+Utilities
+*/
