--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+*, *:before, *:after  {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; 
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -9,6 +15,7 @@ body {
   /* text-align: center; */
   display: grid;
   width: 100%;
+  height: 100vh;
   grid-template-areas:'tree editor editor editor editor'
                       'tree editor editor editor editor'
                       'tree editor editor editor editor'
@@ -22,8 +29,9 @@ body {
   height: 75vh;
   border : 1px solid red;
 }
+
 #editor-container {
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
