--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
-*, *:before, *:after  {
+*,
+*:before,
+*:after {
   padding: 0;
   margin: 0;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 body {
@@ -65,9 +67,21 @@ ul {
   text-decoration: none;
   padding: 1.05em 1em;
 }
-.tabi > ul > li > a span {
+.tabName {
   position: relative;
   top: 5px;
+}
+
+.tab_name:hover .closeX {
+  visibility: visible;
+}
+
+.closeX {
+  visibility: hidden;
+  color: white;
+  position: relative;
+  top: 5px;
+  left: 7px;
 }
 
 #editor-container {
@@ -93,7 +107,7 @@ Tree Styling
   overflow-y: scroll;
   /* justify-content: left; */
 }
-li {
+/* li {
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
   cursor: pointer;
@@ -104,7 +118,7 @@ li {
 li:hover {
   color: #3f3f3f;
   font-weight: bold;
-}
+} */
 
 #btn-updatefile {
   justify-self: center;
