--- a/src/App.css
+++ b/src/App.css
@@ -46,12 +46,15 @@ Footer Styling
 /*
 Tree Styling
 */
-.tree {
+.left-panel {
   grid-area: tree;
   background: #61616157;
   overflow-y: scroll;
   /* justify-content: left; */
 }
+
+
+
 li {
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
@@ -65,7 +68,7 @@ li:hover {
   font-weight: bold;
 }
 
-#btn-updatefile {
+#open-folder-button {
   justify-self: center;
   padding: 8px;
   background: none;
@@ -74,7 +77,7 @@ li:hover {
   border-radius: 3px;
   transition: 0.1s;
 }
-#btn-updatefile:hover {
+#open-folder-button:hover {
   background: #747474;
   font-weight: bold;
   border-radius: 15px;
